# one-click-tee

./: Cargo.toml
.github/workflows/: azure-build.yml
