[package]
name = "one-click-tee"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport = "0.3.1"
anyhow = "1.0.71"
axum = "0.7.1"
hyper = "1.0.1"
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
